added comments, testing.

--- a/_posts/2017-7-13-Hello.md
+++ b/_posts/2017-7-13-Hello.md
@@ -1,8 +1,7 @@
 ---
 layout: post
-title: New blog, that probably wont die.
+title: New blog.
+comments: true
 ---
 
-Hi world, I'm about to drop code off.
-
-Do what you wish.
+Hi world, I'm getting closer to having this portal done and able to worry about a blog post... Soon.
