writing posts. :D eeprom flasher.

--- a/_posts/2017-7-13-Hello.md
+++ b/_posts/2017-7-13-Hello.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: New blog.
-comments: true
+comments: false
 ---
 
 Hi world, I'm getting closer to having this portal done and able to worry about a blog post... Soon.
