--- a/404.md
+++ b/404.md
@@ -1,9 +1,15 @@
 ---
 layout: page
-title: 404 - Page not found
+title: 404
 permalink: /404
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Sorry, that GET isn't available.
 
-[<img src="{{ site.baseurl }}/images/404.jpg" style="width: 400px; max-width: 90%;"/>]({{ site.baseurl }}/)
+You've done something wrong.
+
+ [back to the homepage]({{ site.baseurl }}/)
+ 
+<center>
+<img src="{{ site.baseurl }}/images/404.png" alt="404">
+</center>
